@@ -154,6 +154,7 @@ eggs =
     plone.app.theming
     plone.app.themingplugins
     collective.mailchimp
+    plone.api
 
 zcml =
     collective.recaptcha
