@@ -6,18 +6,12 @@ Products.PloneHotfix20151208 = 1.0
 
 # Rest.
 AccessControl = 3.0.9
-Genshi = 0.6
-Pillow = 3.0.0
-Products.DCWorkflowGraph = 0.4.1
-Products.DataGridField = 1.9.4
-Products.FCKeditor = 2.6.6.3
-Products.OrderableReferenceField = 1.2-beta4
-Products.PloneFormGen = 1.7.17
-Products.SimpleAttachment = 4.4
 collective.emaillogin4 = 1.3
+collective.mailchimp = 1.4.1
 collective.recaptcha = 1.1.5
 collective.recipe.supervisor = 0.19
 collective.recipe.template = 1.11
+Genshi = 0.6
 gocept.munin = 0.1
 gocept.recipe.env = 1.0
 hexagonit.recipe.cmmi = 2.0
@@ -25,13 +19,23 @@ hexagonit.recipe.download = 1.7
 jquery.pyproxy = 0.5
 meld3 = 0.6.10
 munin.zope = 1.3.3
+Pillow = 3.0.0
+plone.api = 1.4.11
 plone.app.themingplugins = 1.0
 plone.recipe.varnish = 1.2.2
+postmonkey = 1.0b
+Products.DataGridField = 1.9.4
+Products.DCWorkflowGraph = 0.4.1
+Products.FCKeditor = 2.6.6.3
+Products.OrderableReferenceField = 1.2-beta4
+Products.PloneFormGen = 1.7.17
+Products.SimpleAttachment = 4.4
 pyPDF = 1.13
 quintagroup.captcha.core = 0.4.3
 quintagroup.formlib.captcha = 1.4.3
 recaptcha-client = 1.0.6
 reportlab = 2.6
+requests = 2.9.1
 superlance = 0.7
 supervisor = 3.1.3
 threadframe = 0.2
@@ -50,7 +54,3 @@ Products.TemplateFields = 1.2.5
 collective.js.jqueryui = 1.9.2.0
 #plone.app.jquery = 1.7.2
 
-# mailchimp deps
-collective.mailchimp = 1.4.1
-postmonkey = 1.0b
-requests = 2.9.1
